--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(Qt5 COMPONENTS Quick Core Qml Gui)
 qt5_add_resources(RESOURCES qml.qrc)
 add_executable(main main.cpp ${RESOURCES})
 
-include_directories(../clist ../treemodel)
+include_directories(../clist ../treemodel ../tablemodel)
 
-link_directories(../list ../treemodel)
-target_link_libraries(main treemodel clist Qt5::Quick Qt5::Core)
+link_directories(../list ../treemodel ../tablemodel)
+target_link_libraries(main treemodel tablemodel clist Qt5::Quick Qt5::Core)
