--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.1.0)
 project(gui)
 
-find_package(Qt5 COMPONENTS Quick Core Qml Gui)
+find_package(Qt5 COMPONENTS Quick Core QuickControls2)
 
 qt5_add_resources(RESOURCES qml.qrc)
 add_executable(main main.cpp ${RESOURCES})
@@ -9,4 +9,4 @@ add_executable(main main.cpp ${RESOURCES})
 include_directories(../clist ../treemodel ../tablemodel)
 
 link_directories(../list ../treemodel ../tablemodel)
-target_link_libraries(main treemodel tablemodel clist Qt5::Quick Qt5::Core)
+target_link_libraries(main treemodel tablemodel clist Qt5::Quick Qt5::Core Qt5::QuickControls2)
