added an error page
Signed-off-by: Kyler KY <kylerky@live.com>

--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -3,10 +3,17 @@ project(gui)
 
 find_package(Qt5 COMPONENTS Quick Core QuickControls2)
 
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+set(CMAKE_AUTOMOC ON)
+
 qt5_add_resources(RESOURCES qml.qrc)
 add_executable(main main.cpp ${RESOURCES})
+add_library(errmsg launcherrmsg.cpp)
 
-include_directories(../clist ../treemodel ../tablemodel)
+include_directories(../clist ../treemodel ../tablemodel .)
 
-link_directories(../list ../treemodel ../tablemodel)
-target_link_libraries(main treemodel tablemodel clist Qt5::Quick Qt5::Core Qt5::QuickControls2)
+target_link_libraries(errmsg Qt5::Core)
+
+link_directories(../clist ../treemodel ../tablemodel .)
+target_link_libraries(main errmsg treemodel tablemodel clist Qt5::Quick Qt5::Core Qt5::QuickControls2)
