--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -11,9 +11,9 @@ qt5_add_resources(RESOURCES qml.qrc)
 add_executable(main main.cpp ${RESOURCES})
 add_library(errmsg launcherrmsg.cpp)
 
-include_directories(../clist ../treemodel ../tablemodel ../index .)
+include_directories(../clist ../treemodel ../tablemodel ../index ../statistics .)
 
 target_link_libraries(errmsg Qt5::Core)
 
-link_directories(../clist ../treemodel ../tablemodel ../index .)
-target_link_libraries(main errmsg treemodel tablemodel clist indexmap Qt5::Quick Qt5::Core Qt5::QuickControls2)
+link_directories(../clist ../treemodel ../tablemodel ../index ../statistics .)
+target_link_libraries(main errmsg treemodel tablemodel indexmap statistics clist Qt5::Quick Qt5::Core Qt5::QuickControls2)
